--- a/index.html
+++ b/index.html
@@ -5,41 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finsweet</title>
     <link
-    rel="stylesheet"
-    data-purpose="Layout StyleSheet"
-    title="Web Awesome"
-    href="/css/app-wa-462758aa1e172f82d39e1ea35e919e0a.css?vsn=d"
-  >
+      rel="stylesheet"
+      data-purpose="Layout StyleSheet"
+      title="Web Awesome"
+      href="/css/app-wa-462758aa1e172f82d39e1ea35e919e0a.css?vsn=d"
+    />
 
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css"
-    >
+    />
 
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-duotone-solid.css"
-    >
+    />
 
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-thin.css"
-    >
+    />
 
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-solid.css"
-    >
+    />
 
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-regular.css"
-    >
+    />
 
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-light.css"
-    >
+    />
     <!-- ====================== Css Link ====================== -->
     <link rel="stylesheet" href="./Css/bootstrap.min.css" />
     <link rel="stylesheet" href="./Css/style.css" />
@@ -58,27 +58,27 @@
         </picture>
         <!-- ========== Responsive Toogle Button ======== -->
         <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- ========== Responsive Toogle Button ======== -->
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- ========== Responsive Toogle Button ======== -->
         <div class="CoustomNavbarMenu">
           <ul class="navbar-nav CoustomNavbarIMenuUl ms-auto">
             <li class="CoustomNavbarIMenuUl__Item">
               <a href="#">Home</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
-              <a  href="#">About us</a>
+              <a href="#">About us</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
-              <a  href="#">Features</a>
+              <a href="#">Features</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
               <a href="#">Pricing</a>
@@ -97,32 +97,139 @@
     <!-- ====================== NavBar Markup ====================== -->
 
     <!-- ============ Building MarkUp============== -->
-     <section id="Building">
+    <section id="Building">
       <div class="container">
-        <div class="row">
+        <div class="row justify-content-between align-items-center">
           <div class="col-lg-5">
-<div class="BuildingPart">
-  <h1 class="BuildingPartHeading">
-    Building stellar websites for early startups
-  </h1>
-  <p class="BuildingPart__Summary">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-  </p>
-  <div class="BuildingPartBtn">
-   <div class="row gx-0">
-    <div class="col-lg-6"><button class="CoustomNav__button BuildingPart--Button1">View our work</button></div>
-    <div class="col-lg-6"><button class="CoustomNav__button BuildingPart--Button2">View Pricing <i class="fa-light fa-arrow-right-long"></i></button></div>
-  </div>
-   </div>
-</div>
+            <div class="BuildingPart">
+              <h1 class="BuildingPartHeading">
+                Building stellar websites for early startups
+              </h1>
+              <p class="BuildingPart__Summary">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt.
+              </p>
+              <div class="BuildingPartBtn">
+                <div class="row gx-0">
+                  <div class="col-lg-6">
+                    <button class="CoustomNav__button BuildingPart--Button1">
+                      View our work
+                    </button>
+                  </div>
+                  <div class="col-lg-6">
+                    <button class="CoustomNav__button BuildingPart--Button2">
+                      View Pricing &nbsp;
+                      <i class="fa-light fa-arrow-right-long"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-lg-6">
-
+            <div class="BuildingPartRight">
+              <picture>
+                <img
+                  src="./images/Building/Illustration.png"
+                  alt="Illustration.png"
+                  title="Illustration.png"
+                />
+              </picture>
+            </div>
           </div>
         </div>
       </div>
-     </section>
+    </section>
     <!-- ============ Building MarkUp============== -->
+    <!-- =========== WorkPart Markup ============== -->
+    <section id="Work">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="WorkPartLeft">
+              <h2 class="WorkPartLeft__Heading">How we work</h2>
+              <p class="WorkPartLeft__summery">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+              <a href="#" class="WorkPartLeft__link">
+                Get in touch with us &nbsp;
+                <i class="fa-light fa-arrow-right-long"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6 WorkpartRight">
+            <div class="row row-gap-5">
+              <div class="col-lg-6">
+                <div class="WorkPartRightBoxItem">
+                  <picture>
+                    <img
+                      src="./images/Work/pointer-1.png"
+                      alt="pointer-1.png"
+                      title="pointer-1.png"
+                    />
+                  </picture>
+                  <h3 class="WorkPartRightBoxItem__Heading">Strategy</h3>
+                  <p class="WorkPartRightBoxItem__Summary">
+                    Euismod faucibus turps eu gravida mi. Pellentesque et velit
+                    aliquam .
+                  </p>
+                </div>
+
+            </div>
+            <div class="col-lg-6">
+              <div class="WorkPartRightBoxItem">
+                <picture>
+                  <img
+                    src="./images/Work/pointer-2.png"
+                    alt="pointer-2.png"
+                    title="pointer-2.png"
+                  />
+                </picture>
+                <h3 class="WorkPartRightBoxItem__Heading">Strategy</h3>
+                <p class="WorkPartRightBoxItem__Summary">
+                  Euismod faucibus turps eu gravida mi. Pellentesque et velit
+                  aliquam .
+                </p>
+              </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="WorkPartRightBoxItem">
+            <picture>
+              <img
+                src="./images/Work/pointer-3.png"
+                alt="pointer-3.png"
+                title="pointer-3.png"
+              />
+            </picture>
+            <h3 class="WorkPartRightBoxItem__Heading">Strategy</h3>
+            <p class="WorkPartRightBoxItem__Summary">
+              Euismod faucibus turps eu gravida mi. Pellentesque et velit
+              aliquam .
+            </p>
+          </div>
+    </div>
+    <div class="col-lg-6">
+      <div class="WorkPartRightBoxItem">
+        <picture>
+          <img
+            src="./images/Work/pointer-4.png"
+            alt="pointer-4.png"
+            title="pointer-4.png"
+          />
+        </picture>
+        <h3 class="WorkPartRightBoxItem__Heading">Strategy</h3>
+        <p class="WorkPartRightBoxItem__Summary">
+          Euismod faucibus turps eu gravida mi. Pellentesque et velit
+          aliquam .
+        </p>
+      </div>
+</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- =========== WorkPart Markup ============== -->
     <!-- ====================== Javascript Link ====================== -->
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
