--- a/index.html
+++ b/index.html
@@ -230,6 +230,57 @@
       </div>
     </section>
     <!-- =========== WorkPart Markup ============== -->
+    <!-- =========== ViewPart Markup ============== -->
+    <section id="View">
+      <div class="container">
+        <Div class="ViewPart">
+          <div class="ViewPartHeading d-flex justify-content-between">
+            <h4 class="ViewPartHeading_Title">
+              View our projects
+            </h4>
+            <h4 class="ViewPartHeading__ViewMore">
+              View More &nbsp;<i class="fa-light fa-arrow-right-long"></i>
+            </h4>
+          </div>
+          <div class="ViewPartLeftRightWrapper d-flex justify-content-between">
+            <div class="ViewPartLeft">
+              <picture>
+                <img src="./images/View/Card.png" alt="Card.png" title="Card.png">
+              </picture>
+              <div class="ViewPartLeftOverlayer">
+                <div class="ViewPartLeftOverlayerWrapper">
+                  <h4 class="ViewPartLeftOverlayer__Heading">
+                    Workhub office Webflow Webflow Design
+                  </h4>
+                  <p class="ViewPartLeftOverlayer__summary">
+                    Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam
+                  </p>
+                  <a href="
+                  #" class="mt-4 ViewPartLeftOverlayer__link">View project &nbsp;<i class="fa-light fa-arrow-right-long"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="ViewPartRight">
+              <div class="ViewPartRightWebsite">
+                <picture>
+                  <img src="./images/View/Rectangle_1.png" alt="Rectangle_1.png" title="Rectangle_1.png">
+                </picture>
+                <div class="ViewPartRightWebsiteOverlayer">
+                  <div class=" d-flex flex-column ViewPartRightOverlayerWrapper">
+                    <h4 class="ViewPartRightWebsiteOverlayer__Header">
+                      Unisaas Website
+  Design
+                    </h4>
+                    <a href="#" class="ViewPartRightWebsiteOverlayer__link">View portfolio &nbsp; <i class="fa-light fa-arrow-right-long"></i> </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </Div>
+      </div>
+    </section>
+    <!-- =========== ViewPart Markup ============== -->
     <!-- ====================== Javascript Link ====================== -->
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
