--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
               </div>
             </div>
             <div class="ViewPartRight">
+             <div class="ViewPartRightWrapper">
               <div class="ViewPartRightWebsite">
                 <picture>
                   <img src="./images/View/Rectangle_1.png" alt="Rectangle_1.png" title="Rectangle_1.png">
@@ -275,12 +276,69 @@
                   </div>
                 </div>
               </div>
+             </div>
+              <div class="ViewPartRightJoinCurch">
+                <picture>
+                  <img src="./images/View/Card2.png" alt="Card2.png" title="Card2.png">
+                </picture>
+              </div>
             </div>
           </div>
         </Div>
       </div>
     </section>
     <!-- =========== ViewPart Markup ============== -->
+    <!-- =========== SolvesProblem Markup ============== -->
+     <section id="SolvesProblem">
+      <div class="container">
+        <div class="d-flex flex-column align-items-center text-center SolvesProblemHeader">
+          <h3 class="SolvesProblemHeader__SubTitle">
+            Features
+          </h3>
+          <h4 class="SolvesProblemHeader__Title">
+            Design that solves problems, one product at a time
+          </h4>
+        </div>
+        <div class="mt-5 row">
+          <div class="col-lg-4">
+<div class="SolvesProblemItem">
+  <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+  <h4 class="mt-2 SolvesProblemItem__Header">
+    Uses Client First
+  </h4>
+  <p class="mt-1 SolvesProblemItem__Summary">
+    Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
+  </p>
+</div>
+          </div>
+          <div class="col-lg-4">
+            <div class="SolvesProblemItem">
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <h4 class="mt-2 SolvesProblemItem__Header">
+                Uses Client First
+              </h4>
+              <p class="mt-1 SolvesProblemItem__Summary">
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
+              </p>
+            </div>
+                      </div><div class="col-lg-4">
+
+          </div>
+          <div class="col-lg-4">
+            <div class="SolvesProblemItem">
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <h4 class="mt-2 SolvesProblemItem__Header">
+                Uses Client First
+              </h4>
+              <p class="mt-1 SolvesProblemItem__Summary">
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
+              </p>
+            </div>
+                      </div>
+        </div>
+      </div>
+     </section>
+    <!-- =========== SolvesProblem Markup ============== -->
     <!-- ====================== Javascript Link ====================== -->
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
