--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     </section>
     <!-- =========== WorkPart Markup ============== -->
     <!-- =========== ViewPart Markup ============== -->
-    <section id="View">
+    <!-- <section id="View">
       <div class="container">
         <Div class="ViewPart">
           <div class="ViewPartHeading d-flex justify-content-between">
@@ -286,8 +286,29 @@
           </div>
         </Div>
       </div>
-    </section>
+    </section> -->
     <!-- =========== ViewPart Markup ============== -->
+    <!-- =========== ViewPart Markup2 ============== -->
+     <section id="View">
+      <div class="container">
+        <div class="row d-flex align-items-center ViewPartHeader">
+          <div class="col ViewPartHeader__Title">View our projects</div>
+          <div class="col text-end ViewPartHeader__SubTitle">View More &nbsp;<i class="fa-light fa-arrow-right-long"></i></div>
+        </div>
+        <div class="row">
+          <div class="col-8">
+            <div class="ViewPartWorkhub">
+              <picture><img src="./images/View/Card.png" alt="Card.png" title="Card.png"></picture>
+              <div class="row"> <div class="col-6 ViewPartWorkhubOverlayer"></div>
+
+              </div></div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- =========== ViewPart Markup2 ============== -->
     <!-- =========== SolvesProblem Markup ============== -->
      <section id="SolvesProblem">
       <div class="container">
