--- a/index.html
+++ b/index.html
@@ -299,14 +299,39 @@
           <div class="col-8">
             <div class="ViewPartWorkhub">
               <picture><img src="./images/View/Card.png" alt="Card.png" title="Card.png"></picture>
-              <div class="row"> <div class="col-6 ViewPartWorkhubOverlayer"></div>
+              <div class="ViewPartWorkhub__Overlayer">
 
-              </div></div>
+              </div>
+            </div>
+
 
             </div>
-          </div>
+            <div class="col-4">
+            <div class="row d-flex flex-column ViewPartRight">
+              <div class="col">
+                <div class="ViewPartRightWebsite">
+                  <picture>
+                    <img src="./images/View/Rectangle_1.png" alt="Rectangle_1.png" title="Rectangle_1.png">
+                  </picture>
+                  <div class="ViewPartRightWebsiteOverlayer">
+                    <h4 class="ViewPartRightWebsiteOverlayer__title">Unisaas Website Design</h4>
+                    <a href="#" class="ViewPartRightWebsiteOverlayer__link">View portfolio &nbsp; <i class="fa-light fa-arrow-right-long"></i></a>
+                  </div>
+                </div>
+              </div>
+                <div class="col">
+                  <div class="ViewPartRightJoinCurch">
+                <picture>
+                  <img src="./images/View/Card2.png" alt="Card2.png" title="Card2.png">
+                </picture>
+                  </div>
+
+              </div>
+            </div>
+            </div>
+            </div>
         </div>
-      </div>
+
      </section>
     <!-- =========== ViewPart Markup2 ============== -->
     <!-- =========== SolvesProblem Markup ============== -->
@@ -322,7 +347,7 @@
         </div>
         <div class="mt-5 row">
           <div class="col-lg-4">
-<div class="SolvesProblemItem">
+ <div class=" SolvesProblemItem">
   <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
   <h4 class="mt-2 SolvesProblemItem__Header">
     Uses Client First
@@ -342,9 +367,7 @@
                 Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
               </p>
             </div>
-                      </div><div class="col-lg-4">
-
-          </div>
+                      </div>
           <div class="col-lg-4">
             <div class="SolvesProblemItem">
               <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
@@ -355,7 +378,40 @@
                 Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
               </p>
             </div>
-                      </div>
+          </div>
+          <div class="mt-3 col-lg-4">
+            <div class="SolvesProblemItem">
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <h4 class="mt-2 SolvesProblemItem__Header">
+                Uses Client First
+              </h4>
+              <p class="mt-1 SolvesProblemItem__Summary">
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
+              </p>
+            </div>
+          </div>
+          <div class="mt-3 col-lg-4">
+            <div class="SolvesProblemItem">
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <h4 class="mt-2 SolvesProblemItem__Header">
+                Uses Client First
+              </h4>
+              <p class="mt-1 SolvesProblemItem__Summary">
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
+              </p>
+            </div>
+          </div>
+          <div class="mt-3 col-lg-4">
+            <div class="SolvesProblemItem">
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <h4 class="mt-2 SolvesProblemItem__Header">
+                Uses Client First
+              </h4>
+              <p class="mt-1 SolvesProblemItem__Summary">
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
      </section>
