--- a/index.html
+++ b/index.html
@@ -230,64 +230,7 @@
       </div>
     </section>
     <!-- =========== WorkPart Markup ============== -->
-    <!-- =========== ViewPart Markup ============== -->
-    <!-- <section id="View">
-      <div class="container">
-        <Div class="ViewPart">
-          <div class="ViewPartHeading d-flex justify-content-between">
-            <h4 class="ViewPartHeading_Title">
-              View our projects
-            </h4>
-            <h4 class="ViewPartHeading__ViewMore">
-              View More &nbsp;<i class="fa-light fa-arrow-right-long"></i>
-            </h4>
-          </div>
-          <div class="ViewPartLeftRightWrapper d-flex justify-content-between">
-            <div class="ViewPartLeft">
-              <picture>
-                <img src="./images/View/Card.png" alt="Card.png" title="Card.png">
-              </picture>
-              <div class="ViewPartLeftOverlayer">
-                <div class="ViewPartLeftOverlayerWrapper">
-                  <h4 class="ViewPartLeftOverlayer__Heading">
-                    Workhub office Webflow Webflow Design
-                  </h4>
-                  <p class="ViewPartLeftOverlayer__summary">
-                    Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam
-                  </p>
-                  <a href="
-                  #" class="mt-4 ViewPartLeftOverlayer__link">View project &nbsp;<i class="fa-light fa-arrow-right-long"></i></a>
-                </div>
-              </div>
-            </div>
-            <div class="ViewPartRight">
-             <div class="ViewPartRightWrapper">
-              <div class="ViewPartRightWebsite">
-                <picture>
-                  <img src="./images/View/Rectangle_1.png" alt="Rectangle_1.png" title="Rectangle_1.png">
-                </picture>
-                <div class="ViewPartRightWebsiteOverlayer">
-                  <div class=" d-flex flex-column ViewPartRightOverlayerWrapper">
-                    <h4 class="ViewPartRightWebsiteOverlayer__Header">
-                      Unisaas Website
-  Design
-                    </h4>
-                    <a href="#" class="ViewPartRightWebsiteOverlayer__link">View portfolio &nbsp; <i class="fa-light fa-arrow-right-long"></i> </a>
-                  </div>
-                </div>
-              </div>
-             </div>
-              <div class="ViewPartRightJoinCurch">
-                <picture>
-                  <img src="./images/View/Card2.png" alt="Card2.png" title="Card2.png">
-                </picture>
-              </div>
-            </div>
-          </div>
-        </Div>
-      </div>
-    </section> -->
-    <!-- =========== ViewPart Markup ============== -->
+
     <!-- =========== ViewPart Markup2 ============== -->
      <section id="View">
       <div class="container">
@@ -295,7 +238,7 @@
           <div class="col ViewPartHeader__Title">View our projects</div>
           <div class="col text-end ViewPartHeader__SubTitle">View More &nbsp;<i class="fa-light fa-arrow-right-long"></i></div>
         </div>
-        <div class="row">
+        <div class="mt-5 row">
           <div class="col-8">
             <div class="ViewPartWorkhub">
               <picture><img src="./images/View/Card.png" alt="Card.png" title="Card.png"></picture>
@@ -416,6 +359,40 @@
       </div>
      </section>
     <!-- =========== SolvesProblem Markup ============== -->
+     <!-- =========== ClientSays Markup =========== -->
+     <section id="ClientSays">
+      <div class="container">
+        <div class="d-flex flex-row row ClientSays">
+          <div class="col-4">
+<h4 class="ClientSaysLeft__title">
+  What our clients say about us
+</h4>
+<h4 class="ClientSaysLeft__SubTitle">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.
+</h4>
+        </div>
+        <div class="col-7 ClientSaysRight">
+          <h4 class="ClientSaysRight__Title">
+            "The best agency we've worked with so far. They understand our product and are able to add new features with a great focus."
+          </h4>
+          <div class="d-flex mt-5 ClientSaysRightAuthor">
+            <picture>
+              <img src="./images/Client/Author.png" alt="Author.png" title="Author.png">
+            </picture>
+            <div class="ClientSaysRightAuthorName">
+              <h4 class="ClientSaysRightAuthorName__title">
+                Jenny Wilson
+              </h4>
+              <h4 class="ClientSaysRightAuthorName__title">
+                Vice President
+              </h4>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+     </section>
+        <!-- =========== ClientSays Markup =========== -->
     <!-- ====================== Javascript Link ====================== -->
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
