--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finsweet</title>
-    <link
+    <!-- ===================Font Awesome ================ -->
+     <link
       rel="stylesheet"
       data-purpose="Layout StyleSheet"
       title="Web Awesome"
       href="/css/app-wa-462758aa1e172f82d39e1ea35e919e0a.css?vsn=d"
-    />
+    >
 
     <link
       rel="stylesheet"
@@ -40,6 +41,7 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-light.css"
     />
+    <!-- ===================Font Awesome ================ -->
     <!-- ====================== Css Link ====================== -->
     <link rel="stylesheet" href="./Css/bootstrap.min.css" />
     <link rel="stylesheet" href="./Css/style.css" />
