--- a/index.html
+++ b/index.html
@@ -238,14 +238,18 @@
       <div class="container">
         <div class="row d-flex align-items-center ViewPartHeader">
           <div class="col ViewPartHeader__Title">View our projects</div>
-          <div class="col text-end ViewPartHeader__SubTitle">View More &nbsp;<i class="fa-light fa-arrow-right-long"></i></div>
+          <a class="col text-end ViewPartHeader__SubTitle">View More &nbsp;<i class="fa-light fa-arrow-right-long"></i></a>
         </div>
         <div class="mt-5 row">
           <div class="col-8">
             <div class="ViewPartWorkhub">
               <picture><img src="./images/View/Card.png" alt="Card.png" title="Card.png"></picture>
-              <div class="ViewPartWorkhub__Overlayer">
-
+              <div class="ViewPartWorkhubOverlayer">
+                <div class="ViewPartWorkhubOverlayerWrapper">
+                  <h4 class="ViewPartWorkhubOverlayer__Title">Workhub office Webflow Webflow Design</h4>
+                <p class="ViewPartWorkhubOverlayer__Summary">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam </p>
+                <a class="col ViewPartHeader__SubTitle ViewPartWorkhubOverlayer__link">View More &nbsp;<i class="fa-light fa-arrow-right-long"></i></a>
+                </div>
               </div>
             </div>
 
@@ -258,9 +262,11 @@
                   <picture>
                     <img src="./images/View/Rectangle_1.png" alt="Rectangle_1.png" title="Rectangle_1.png">
                   </picture>
-                  <div class="ViewPartRightWebsiteOverlayer">
-                    <h4 class="ViewPartRightWebsiteOverlayer__title">Unisaas Website Design</h4>
+                  <div class="ViewPartWorkhubOverlayer w-100">
+                    <div class="ViewPartWorkhubOverlayerWrapper">
+                      <h4 class="ViewPartRightWebsiteOverlayer__title">Unisaas Website Design</h4>
                     <a href="#" class="ViewPartRightWebsiteOverlayer__link">View portfolio &nbsp; <i class="fa-light fa-arrow-right-long"></i></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -292,19 +298,19 @@
         </div>
         <div class="mt-5 row">
           <div class="col-lg-4">
- <div class=" SolvesProblemItem">
-  <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
-  <h4 class="mt-2 SolvesProblemItem__Header">
-    Uses Client First
-  </h4>
-  <p class="mt-1 SolvesProblemItem__Summary">
+          <div class=" SolvesProblemItem">
+           <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+            <h4 class="mt-2 SolvesProblemItem__Header">
+           Uses Client First
+         </h4>
+           <p class="mt-1 SolvesProblemItem__Summary">
     Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi.
   </p>
 </div>
           </div>
           <div class="col-lg-4">
             <div class="SolvesProblemItem">
-              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-duotone fa-solid fa-check"></i></a>
               <h4 class="mt-2 SolvesProblemItem__Header">
                 Uses Client First
               </h4>
@@ -326,7 +332,7 @@
           </div>
           <div class="mt-3 col-lg-4">
             <div class="SolvesProblemItem">
-              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-comments-question"></i></a>
               <h4 class="mt-2 SolvesProblemItem__Header">
                 Uses Client First
               </h4>
@@ -337,7 +343,7 @@
           </div>
           <div class="mt-3 col-lg-4">
             <div class="SolvesProblemItem">
-              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-sharp fa-solid fa-stopwatch"></i></a>
               <h4 class="mt-2 SolvesProblemItem__Header">
                 Uses Client First
               </h4>
@@ -348,7 +354,7 @@
           </div>
           <div class="mt-3 col-lg-4">
             <div class="SolvesProblemItem">
-              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-solid fa-users"></i></a>
+              <a href="#" class="SolvesProblemItem__Icon"><i class="fa-light fa-memo-circle-check"></i></a>
               <h4 class="mt-2 SolvesProblemItem__Header">
                 Uses Client First
               </h4>
@@ -366,18 +372,18 @@
       <div class="container">
         <div class="d-flex flex-row row ClientSays">
           <div class="col-4">
-<h4 class="ClientSaysLeft__title">
-  What our clients say about us
-</h4>
-<h4 class="ClientSaysLeft__SubTitle">
+            <h4 class="ClientSaysLeft__title">
+              What our clients say about us
+            </h4>
+            <h4 class="ClientSaysLeft__SubTitle">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.
-</h4>
-        </div>
-        <div class="col-7 ClientSaysRight">
-          <h4 class="ClientSaysRight__Title">
+            </h4>
+             </div>
+            <div class="col-7 ClientSaysRight">
+           <h4 class="ClientSaysRight__Title">
             "The best agency we've worked with so far. They understand our product and are able to add new features with a great focus."
-          </h4>
-          <div class="d-flex mt-5 ClientSaysRightAuthor">
+            </h4>
+            <div class="d-flex mt-5 gap-3 ClientSaysRightAuthor">
             <picture>
               <img src="./images/Client/Author.png" alt="Author.png" title="Author.png">
             </picture>
@@ -385,7 +391,7 @@
               <h4 class="ClientSaysRightAuthorName__title">
                 Jenny Wilson
               </h4>
-              <h4 class="ClientSaysRightAuthorName__title">
+              <h4 class="mt-1 ClientSaysRightAuthorName__title">
                 Vice President
               </h4>
             </div>
