--- a/index.html
+++ b/index.html
@@ -422,12 +422,13 @@
                     <button class="accordion-button collapsed" type="button"
                       data-bs-toggle="collapse"
                       data-bs-target="#flush-collapseOne" aria-expanded="false"
-                      aria-controls="flush-collapseOne">
+                      aria-controls="flush-collapseOne"> <span
+                        class="Count">01</span>
                       How much v time does it take?
                     </button>
                   </h2>
                   <div id="flush-collapseOne"
-                    class="accordion-collapse collapse"
+                    class="accordion-collapse collapse CustomContent"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">Lorem ipsum dolor sit amet,
                       consectetur adipiscing elit, sed do eiusmod
@@ -443,6 +444,7 @@
                       data-bs-toggle="collapse"
                       data-bs-target="#flush-collapseTwo" aria-expanded="false"
                       aria-controls="flush-collapseTwo">
+                      <span class="Count">02</span>
                       What is your class naming convention?
                     </button>
                   </h2>
@@ -450,86 +452,320 @@
                     class="accordion-collapse collapse"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</div>
-                    </div>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor
+                      incididunt ut labore et dolore magna aliqua.</div>
                   </div>
+                </div>
 
-                  <!-- ********2********** -->
-                  <!-- ********3********** -->
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree"
-                        aria-expanded="false"
-                        aria-controls="flush-collapseThree">
-                        How do you communicate?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseThree"
-                      class="accordion-collapse collapse"
-                      data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</div>
-                    </div>
+                <!-- ********2********** -->
+                <!-- ********3********** -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseThree"
+                      aria-expanded="false"
+                      aria-controls="flush-collapseThree">
+                      <span class="Count">03</span>
+                      How do you communicate?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor
+                      incididunt ut labore et dolore magna aliqua.</div>
                   </div>
-                  <!-- ********3********** -->
-                  <!-- ********4********** -->
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseFour"
-                        aria-expanded="false"
-                        aria-controls="flush-collapseFour">
-                        I have a bigger project. Can you handle it?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseFour"
-                      class="accordion-collapse collapse"
-                      data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</div>
-                    </div>
+                </div>
+                <!-- ********3********** -->
+                <!-- ********4********** -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseFour"
+                      aria-expanded="false"
+                      aria-controls="flush-collapseFour">
+                      <span class="Count">04</span>
+                      I have a bigger project. Can you handle it?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFour"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor
+                      incididunt ut labore et dolore magna aliqua.</div>
                   </div>
-                  <!-- ********4********** -->
+                </div>
+                <!-- ********4********** -->
 
-                  <!-- ********5********** -->
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseFive"
-                        aria-expanded="false"
-                        aria-controls="flush-collapseFive">
-                        What is your class naming convention?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseFive"
-                      class="accordion-collapse collapse"
-                      data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</div>
-                    </div>
+                <!-- ********5********** -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseFive"
+                      aria-expanded="false"
+                      aria-controls="flush-collapseFive">
+                      <span class="Count">05</span>
+                      What is your class naming convention?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFive"
+                    class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Lorem ipsum dolor sit amet,
+                      consectetur adipiscing elit, sed do eiusmod tempor
+                      incididunt ut labore et dolore magna aliqua.</div>
                   </div>
-                  <!-- ********5********** -->
+                </div>
+                <!-- ********5********** -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- =========== Frequently Markup =========== -->
+      <!-- =========== Inquiry Markup =========== -->
+      <section id="Inquary">
+        <div class="container">
+          <div class="row gx-0">
+            <div class="col-6">
+              <div class="InquaryLeftPart">
+                <picture>
+                  <img src="./images/Inquary/Inquary.png" alt="Inquary.png"
+                    title="Inquary.png" class="w-100 img-fluid">
+                </picture>
+                <div class="InquaryLeftPartOverlayer">
+                  <div class="InquaryLeftPartOverlayerWrapper">
+                    <h4 class="InquaryLeftPartOverlayer__title">
+                      Building stellar websites for early startups
+                    </h4>
+                    <p class="InquaryLeftPartOverlayer__summary">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua ut enim.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="InquaryRightPart">
+                <div class="InquaryRightPartWrapper">
+                  <h4 class="InquaryRightPart__title">
+                    Send inquiry
+                  </h4>
+                  <p class="InquaryRightPart__Summary">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore.
+                  </p>
+
+                  <div class="InquaryRightPartInputField">
+                    <input type="text"
+                      class="form-control InquaryRightPartInputField__Cstm"
+                      id="formGroupExampleInput" placeholder="Your Name">
+                    <input type="text"
+                      class="form-control InquaryRightPartInputField__Cstm"
+                      id="formGroupExampleInput" placeholder="Email">
+                    <input type="text"
+                      class="form-control InquaryRightPartInputField__Cstm"
+                      id="formGroupExampleInput"
+                      placeholder="Paste your Figma design URL">
+                  </div>
+                  <button
+                    class=" CoustomNav__button BuildingPart--Button1 Cutom--button2">
+                    Send an Inquiry
+                  </button>
+                  <a href="#" class="InquaryRightPart__Link">Get in touch with
+                    us &nbsp; <i class="fa-light fa-arrow-right-long"></i></a>
                 </div>
               </div>
             </div>
           </div>
-        </section>
-        <!-- =========== Frequently Markup =========== -->
-        <!-- ====================== Javascript Link ====================== -->
-        <script src="./js/bootstrap.min.js"></script>
-        <script src="./js/main.js"></script>
-        <!-- ====================== Javascript Link ====================== -->
-      </body>
+        </div>
+      </section>
+      <!-- =========== Inquiry Markup =========== -->
+      <!-- =========== OurBlog Markup =========== -->
+      <section id="OurBlog">
+        <div class="container">
+          <div class="OurBlogPart">
+            <h4 class="OurBlog__title">
+              Our Blog
+            </h4>
+            <div class="row OurBlogPartWrapper">
+              <div class="col-4">
+                <div class="OurBlogItem1">
+                  <picture>
+                    <img src="./images/Inquary/Item1.png" alt="Item1.png"
+                      title="Item1.png">
+                  </picture>
+                  <h5 class="OurBlogItem1__date">
+                    19 Jan 2022
+                  </h5>
+                  <h4 class="OurBlogItem1__Header">
+                    How one Webflow user grew his single person consultancy from
+                    $0-100K in 14 months
+                  </h4>
+                  <p class="OurBlogItem1__Summary">See how pivoting to Webflow
+                    changed one person's sales strategy and allowed him to
+                    attract</p>
+                  <a href="#" class="OurBlogItem1__linke">Read More &nbsp; <i
+                      class="fa-light fa-arrow-right-long"></i></a>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="OurBlogItem1">
+                  <picture>
+                    <img src="./images/Inquary/Item1.png" alt="Item1.png"
+                      title="Item1.png">
+                  </picture>
+                  <h5 class="OurBlogItem1__date">
+                    19 Jan 2022
+                  </h5>
+                  <h4 class="OurBlogItem1__Header">
+                    How one Webflow user grew his single person consultancy from
+                    $0-100K in 14 months
+                  </h4>
+                  <p class="OurBlogItem1__Summary">See how pivoting to Webflow
+                    changed one person's sales strategy and allowed him to
+                    attract</p>
+                  <a href="#" class="OurBlogItem1__linke">Read More &nbsp; <i
+                      class="fa-light fa-arrow-right-long"></i></a>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="OurBlogItem1">
+                  <picture>
+                    <img src="./images/Inquary/Item1.png" alt="Item1.png"
+                      title="Item1.png">
+                  </picture>
+                  <h5 class="OurBlogItem1__date">
+                    19 Jan 2022
+                  </h5>
+                  <h4 class="OurBlogItem1__Header">
+                    How one Webflow user grew his single person consultancy from
+                    $0-100K in 14 months
+                  </h4>
+                  <p class="OurBlogItem1__Summary">See how pivoting to Webflow
+                    changed one person's sales strategy and allowed him to
+                    attract</p>
+                  <a href="#" class="OurBlogItem1__linke">Read More &nbsp; <i
+                      class="fa-light fa-arrow-right-long"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- =========== OurBlog Markup =========== -->
+      <!-- =========== Footer Markup =========== -->
+      <section id="Footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <div class="FooterLeft">
+                <picture>
+                  <img src="./images/NavbarLogo/Logo.png" alt="Logo.png"
+                    title="Logo.png">
+                </picture>
+                <p class="FooterLeft__Summary">
+                  We are always open to discuss your project and improve your
+                  online presence.
+                </p>
+                <div class="row FooterLeftContact">
+                  <div class="col-6">
+                    <div class="FooterLeftContactleft">
+                      <h4 class="FooterLeftContactleft__header">
+                        Email me at
+                      </h4>
+                      <a href="#" class="FooterLeftContactleft__mail">
+                        contact@website.com
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="FooterLeftContactleft">
+                      <h4 class="FooterLeftContactleft__header">
+                        Call us
+                      </h4>
+                      <a href="#" class="FooterLeftContactleft__mail">
+                        0927 6277 28525
+                      </a>
+                    </div>
+                  </div>
 
-    </html>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="FotterRigth">
+                <h4 class="FotterRigth__title">
+                  Lets Talk!
+                </h4>
+                <p class="FotterRigth__Summary">
+                  We are always open to discuss your project, improve your
+                  online presence and help with your UX/UI design challenges.
+                </p>
+                <div class="FotterRigthIcon">
+                  <a href="#" class="FotterRigthIcon__linked"><i
+                      class="fa-brands fa-facebook-f"></i></a>
+
+                  <a href="#" class="FotterRigthIcon__linked"><i
+                      class="fa-brands fa-twitter"></i></a>
+                  <a href="#" class="FotterRigthIcon__linked"> <i
+                      class="fa-brands fa-square-instagram"></i></a>
+                  <a href="#" class="FotterRigthIcon__linked"> <i
+                      class="fa-brands fa-linkedin"></i></a>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- =========== Footer Markup =========== -->
+      <!-- =========== Footer2 Markup =========== -->
+      <footer>
+        <div class="container">
+          <div class="FotterWrapper">
+            <h4 class="FootterPartCopy">Copyright 2022, Finsweet.com</h4>
+
+            <div>
+              <ul class="FootterPartCopyRigt">
+                <li class="FootterPartCopyRigt">
+                  <a class="FootterPartCopyRigt__item" aria-current="page"
+                    href="#">Home</a>
+                </li>
+                <li class="FootterPartCopyRigt">
+                  <a class="FootterPartCopyRigt__item" href="#">Features</a>
+                </li>
+
+                <li class="FootterPartCopyRigt">
+                  <a class="FootterPartCopyRigt__item" href="#">Pricing</a>
+                </li>
+                <li class="FootterPartCopyRigt">
+                  <a class="FootterPartCopyRigt__item" href="#">FAQ</a>
+                </li>
+                <li class="FootterPartCopyRigt">
+                  <a class="FootterPartCopyRigt__item" href="#">Blog</a>
+                </li>
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- =========== Footer2 Markup =========== -->
+      <!-- ====================== Javascript Link ====================== -->
+      <script src="./js/bootstrap.min.js"></script>
+      <script src="./js/main.js"></script>
+      <!-- ====================== Javascript Link ====================== -->
+    </body>
+
+  </html>
