--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
             <a class="col text-end ViewPartHeader__SubTitle">View More &nbsp;<i
                 class="fa-light fa-arrow-right-long"></i></a>
           </div>
-          <div class="mt-5 row">
+          <div class="mt-5 row d-flex">
             <div class="col-8">
               <div class="ViewPartWorkhub">
                 <picture><img src="./images/View/Card.png" alt="Card.png"
-                    title="Card.png"></picture>
+                    title="Card.png" class="w-100 img-fluid"></picture>
                 <div class="ViewPartWorkhubOverlayer">
                   <div class="ViewPartWorkhubOverlayerWrapper">
                     <h4 class="ViewPartWorkhubOverlayer__Title">Workhub office
@@ -231,7 +231,8 @@
                   <div class="ViewPartRightWebsite">
                     <picture>
                       <img src="./images/View/Rectangle_1.png"
-                        alt="Rectangle_1.png" title="Rectangle_1.png">
+                        alt="Rectangle_1.png" title="Rectangle_1.png"
+                        class="img-fluid w-100">
                     </picture>
                     <div class="ViewPartWorkhubOverlayer w-100">
                       <div class="ViewPartWorkhubOverlayerWrapper">
@@ -249,7 +250,7 @@
                   <div class="ViewPartRightJoinCurch">
                     <picture>
                       <img src="./images/View/Card2.png" alt="Card2.png"
-                        title="Card2.png">
+                        title="Card2.png" class="w-100 img-fluid">
                     </picture>
                   </div>
 
