--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-light.css" />
     <!-- ===================Font Awesome ================ -->
     <!-- ====================== Css Link ====================== -->
-    <link rel="stylesheet" href="./Css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./Css/style.css" />
+    <link rel="stylesheet" href="./Css/bootstrap.min.css">
+    <link rel="stylesheet" href="./Css/style.css">
     <!-- ====================== Css Link ====================== -->
   </head>
 
@@ -61,7 +61,7 @@
               <a href="#">Features</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
-              <a href="#">Pricing</a>
+              <a href="./Pricing.html">Pricing</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
               <a href="#">FAQ</a>
