--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
               <a href="#">Home</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
-              <a href="#">About us</a>
+              <a href="./Aboutus.html">About us</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
-              <a href="#">Features</a>
+              <a href="./features.html">Features</a>
             </li>
             <li class="CoustomNavbarIMenuUl__Item">
               <a href="./Pricing.html">Pricing</a>
@@ -294,7 +294,7 @@
                 <a href="#" class="SolvesProblemItem__Icon"><i
                     class="fa-duotone fa-solid fa-check"></i></a>
                 <h4 class="mt-2 SolvesProblemItem__Header">
-                  Uses Client First
+                  Two Free Revision Round
                 </h4>
                 <p class="mt-1 SolvesProblemItem__Summary">
                   Euismod faucibus turpis eu gravida mi. Pellentesque et velit
@@ -308,7 +308,7 @@
                 <a href="#" class="SolvesProblemItem__Icon"><i
                     class="fa-solid fa-users"></i></a>
                 <h4 class="mt-2 SolvesProblemItem__Header">
-                  Uses Client First
+                  Template Customization
                 </h4>
                 <p class="mt-1 SolvesProblemItem__Summary">
                   Euismod faucibus turpis eu gravida mi. Pellentesque et velit
@@ -322,7 +322,7 @@
                 <a href="#" class="SolvesProblemItem__Icon"><i
                     class="fa-solid fa-comments-question"></i></a>
                 <h4 class="mt-2 SolvesProblemItem__Header">
-                  Uses Client First
+                  24/7 Support
                 </h4>
                 <p class="mt-1 SolvesProblemItem__Summary">
                   Euismod faucibus turpis eu gravida mi. Pellentesque et velit
@@ -336,7 +336,7 @@
                 <a href="#" class="SolvesProblemItem__Icon"><i
                     class="fa-sharp fa-solid fa-stopwatch"></i></a>
                 <h4 class="mt-2 SolvesProblemItem__Header">
-                  Uses Client First
+                  Quick Delivery
                 </h4>
                 <p class="mt-1 SolvesProblemItem__Summary">
                   Euismod faucibus turpis eu gravida mi. Pellentesque et velit
@@ -350,7 +350,7 @@
                 <a href="#" class="SolvesProblemItem__Icon"><i
                     class="fa-light fa-memo-circle-check"></i></a>
                 <h4 class="mt-2 SolvesProblemItem__Header">
-                  Uses Client First
+                  Hands-on approach
                 </h4>
                 <p class="mt-1 SolvesProblemItem__Summary">
                   Euismod faucibus turpis eu gravida mi. Pellentesque et velit
