--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="BuildingPartRight">
               <picture>
                 <img src="./images/Building/Illustration.png"
-                  alt="Illustration.png" title="Illustration.png" />
+                  alt="Illustration.png" title="Illustration.png" class="w-100 img-fluid" />
               </picture>
             </div>
           </div>
