--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- ========== Responsive Toogle Button ======== -->
-        <div class="CoustomNavbarMenu">
+        <div
+          class="navbar-collapse collapse CoustomNavbarMenu CoustomNavbarMenu"
+          id="navbarNav">
           <ul class="navbar-nav CoustomNavbarIMenuUl ms-auto">
             <li class="CoustomNavbarIMenuUl__Item">
               <a href="#">Home</a>
@@ -110,7 +112,8 @@
             <div class="BuildingPartRight">
               <picture>
                 <img src="./images/Building/Illustration.png"
-                  alt="Illustration.png" title="Illustration.png" class="w-100 img-fluid" />
+                  alt="Illustration.png" title="Illustration.png"
+                  class="w-100 img-fluid" />
               </picture>
             </div>
           </div>
